@@ -1,28 +1,40 @@
-<?xml version="1.0" encoding="utf-8" ?> 
+<?xml version="1.0" encoding="utf-8" ?>
 
 <configuration>
 
-    <configSections>
-        <section name="activerecord"
+	<configSections>
+		<section name="activerecord"
                  type="Castle.ActiveRecord.Framework.Config.ActiveRecordSectionHandler, Castle.ActiveRecord" />
-    </configSections>
+		<section name="activerecord-asp-net-2.0"
+                 type="Castle.ActiveRecord.Framework.Config.ActiveRecordSectionHandler, Castle.ActiveRecord" />
+	</configSections>
+	<connectionStrings>
+		<add name="Test" 
+	   connectionString="Test Connection String"/>
+	</connectionStrings>
 
-    <activerecord>
-      
-      <config>
-        <add key="hibernate.connection.driver_class" value="NHibernate.Driver.SqlClientDriver" />
-        <add key="hibernate.dialect"                 value="NHibernate.Dialect.MsSql2000Dialect" />
-        <add key="hibernate.connection.provider"     value="NHibernate.Connection.DriverConnectionProvider" />
-        <add key="hibernate.connection.connection_string" value="Data Source=.;Initial Catalog=test;Integrated Security=True;Pooling=False" />
-      </config>
-      
-      <config type="Castle.ActiveRecord.Tests.Model.Test2ARBase, Castle.ActiveRecord.Tests">
-        <add key="hibernate.connection.driver_class" value="NHibernate.Driver.SqlClientDriver" />
-        <add key="hibernate.dialect"                 value="NHibernate.Dialect.MsSql2000Dialect" />
-        <add key="hibernate.connection.provider"     value="NHibernate.Connection.DriverConnectionProvider" />
-        <add key="hibernate.connection.connection_string" value="Data Source=.;Initial Catalog=test2;Integrated Security=True;Pooling=False" />
-      </config>
-      
-    </activerecord>
-    
+	<activerecord-asp-net-2.0>
+		<config>
+			<add key="hibernate.connection.connection_string" value="ConnectionString = ${Test}" />
+		</config>
+	</activerecord-asp-net-2.0>
+
+	<activerecord>
+
+		<config>
+			<add key="hibernate.connection.driver_class" value="NHibernate.Driver.SqlClientDriver" />
+			<add key="hibernate.dialect"                 value="NHibernate.Dialect.MsSql2000Dialect" />
+			<add key="hibernate.connection.provider"     value="NHibernate.Connection.DriverConnectionProvider" />
+			<add key="hibernate.connection.connection_string" value="Data Source=localhost\SQLExpress;Initial Catalog=Test;Integrated Security=True" />
+		</config>
+
+		<config type="Castle.ActiveRecord.Tests.Model.Test2ARBase, Castle.ActiveRecord.Tests">
+			<add key="hibernate.connection.driver_class" value="NHibernate.Driver.SqlClientDriver" />
+			<add key="hibernate.dialect"                 value="NHibernate.Dialect.MsSql2000Dialect" />
+			<add key="hibernate.connection.provider"     value="NHibernate.Connection.DriverConnectionProvider" />
+			<add key="hibernate.connection.connection_string" value="Data Source=localhost\SQLExpress;Initial Catalog=Test;Integrated Security=True" />
+		</config>
+
+	</activerecord>
+
 </configuration>
